# dunendk

./: CMakeLists.txt
dunendk/: CMakeLists.txt
dunendk/ndkAna/: CMakeLists.txt  GENIEdumper.fcl  GENIEdumper_module.cc  NDKAna.fcl  NDKAna_module.cc  NDKAnalysis.fcl  NDKPDAna.fcl  NDKPDAna_module.cc
dunendk/ndkReco/: CMakeLists.txt  NDKReco.fcl  NDKReco_module.cc  standard_recoNDK_dune10kt.fcl
fcl/: CMakeLists.txt  ndk_reco_dune10kt_1x2x6.fcl  prod_ndk_and_ar39.fcl  run_emtrk_CNN.fcl  run_pmtrackCNN.fcl
ndksens/: README
ndksens/examples/: DUNE_custom.py  DUNE_predefined.py
ndksens/ndksens/: experiment.py  mode.py  source.py
releaseDB/: README  base_dependency_database
scripts/: MakeFile_Template  NDKAna  NDKAna.cpp  TMVA_tree  TMVA_tree.cpp  Template_PIDloglike.cpp
scripts/include/: NDKAna.h
test/: CMakeLists.txt
ups/: product_deps
